fix: changed to List.of instead of Collections.singletonList